--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/reflect-metadata": "^0.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   }
 }
